add error, response, function handler

--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "taskproject",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "backend/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon backend/index.js",
+    "start": "node backend/index.js"
   },
+  "type": "module",
   "author": "Vishal Panwar",
   "license": "ISC",
   "dependencies": {
